<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailyDiet</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_detail">Item Detail</string> 
    <string name="yourProfile">Your Profile</string>
    <string name="favoriteDishes">Favorite Dishes</string>
	<string name="imHungry">I\'m Hungry!</string>
	<string name="groceryList">Grocery List</string>
	<string name="calendarDiet">Calendar Diet</string>
	<string name="tobuy">To Buy</string>
	<string name="progressPic">Progress Picture</string>
	<string name="bHungry">I\'m Hungry</string>
    <string name="bProfile">Profile</string>
    <string name="bGroceryList">Grocery List</string>
    <string name="bFavoriteDishes">Eating Tips</string>
    <string name="bUpdateWeight">Update Your Weight</string>
    <string name="bUpdate">Update Profile</string>
    <string name="tvWelcome">Welcome</string>
    <string name="tvProfile">Edit Profile</string>
    <string name="progress">Your Progress</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="startWeight">Starting Weight</string>
    <string name="goalWeight">Goal Weight</string>
     
    <string name="startDate">Starting Date</string>
    <string name="sName">First &amp; Last Name</string>
    <string name="sAge">Age in Years</string>
    <string name="sHeight">Height in Inches</string>
     
    <string name="tvProfileHeader">Profile</string>
    <string name="tvProgress">Progress Tracker</string>
    <string name="tvWeightAsk">Please Input Your Most Recent Weight:</string>
    <string name="bEditProfile">Edit Profile</string>
    <string name="bUpdateProfile">Update Profile</string>
    
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="pork">Pork</string>
    <string name="lamb">Lamb</string>
 	<string name="fish">Fish</string>
 	<string name="turkey">Turkey</string>
 	<string name="lettuce">Lettuce</string>
 	<string name="carrot">Carrots</string>
 	<string name="tomato">Tomato</string>
 	<string name="broccoli">Broccoli</string>
 	<string name="mushroom">Mushrooms</string>
 	<string name="greenBean">Green Beans</string>
 	<string name="rice">Rice</string>
 	<string name="pasta">Pasta</string>
 	<string name="bread">Bread</string>
 	<string name="tortilla">Tortilla</string>
 	<string name="potato">Potato</string>
 	<string name="backToProfile">Back</string>
 	<string name="bHealthyTips">Eating Tips</string>
</resources>
