<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvGroceryListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/groceryList"
        android:textSize="28sp" />

    <CheckBox
        android:id="@+id/cbChicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvGroceryListTitle"
        android:text="@string/chicken"
        android:onClick="onCheckBoxClicked" />

    <CheckBox
        android:id="@+id/cbBeef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbChicken"
        android:text="@string/beef"
        android:onClick="onCheckBoxClicked" />

    <CheckBox
        android:id="@+id/cbPork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbBeef"
        android:text="@string/pork"
        android:onClick="onCheckBoxClicked" />

    <CheckBox
        android:id="@+id/cbFish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbPork"
        android:text="@string/fish"
        android:onClick="onCheckBoxClicked" />
    
    <CheckBox
        android:id="@+id/cbTurkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbFish"
        android:onClick="onCheckBoxClicked"
        android:text="@string/turkey" />
    
    <CheckBox
        android:id="@+id/cbMushrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbTurkey"
        android:text="@string/mushroom"
        android:onClick="onCheckBoxClicked" />    

    <CheckBox
        android:id="@+id/cbLettuce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbMushrooms"
        android:text="@string/lettuce"
        android:onClick="onCheckBoxClicked" />
    
    <CheckBox
        android:id="@+id/cbBroccoli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbLettuce"
        android:text="@string/broccoli"
        android:onClick="onCheckBoxClicked" />
    
    <CheckBox
        android:id="@+id/cbTomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbBroccoli"
        android:text="@string/tomato"
        android:onClick="onCheckBoxClicked" />
    
    <CheckBox
        android:id="@+id/cbBeans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbTomato"
        android:text="@string/greenBean"
        android:onClick="onCheckBoxClicked" />
        
    <CheckBox
        android:id="@+id/cbRice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbBeans"
        android:text="@string/rice"
        android:onClick="onCheckBoxClicked" />
    
    <CheckBox
        android:id="@+id/cbBread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbRice"
        android:text="@string/bread"
        android:onClick="onCheckBoxClicked" />
    
    <CheckBox
        android:id="@+id/cbTortilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbBread"
        android:text="@string/tortilla"
        android:onClick="onCheckBoxClicked" />
    
    <CheckBox
        android:id="@+id/cbPotato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbTortilla"
        android:text="@string/potato"
        android:onClick="onCheckBoxClicked" /> 
        
 	<CheckBox
 	    android:id="@+id/cbPasta"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentLeft="true"
 	    android:layout_below="@+id/cbPotato"
 	    android:onClick="onCheckBoxClicked"
 	    android:text="@string/pasta" />
    
	<Button
	    android:id="@+id/bUpdateGroceryList"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/cbPasta"
	    android:text="Update Grocery List" />

</RelativeLayout>

</ScrollView>
