<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/groceryList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/groceryList" />

    <Button
        android:id="@+id/favoriteDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/groceryList"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/favoriteDishes" />

    <Button
        android:id="@+id/hungry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/favoriteDish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/imHungry" />

    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hungry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/yourProfile" />

</RelativeLayout>